--- a/src/index.css
+++ b/src/index.css
@@ -12,8 +12,8 @@
 
 /* Fonts */
 @font-face {
-  font-family: 'Alloy Ink';
-  src: url('./assets/font/AlloyInk.otf') format('opentype');
+  font-family: 'Antipol-Bold';
+  src: url('./assets/font/Antipol-Bold.otf') format('opentype');
   font-weight: normal;
   font-style: normal;
 }
